--- a/Surreality/Info.plist
+++ b/Surreality/Info.plist
@@ -22,6 +22,10 @@
 	<false/>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Display Photo collections &amp; Albums</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
