--- a/Surreality/Surreality.entitlements
+++ b/Surreality/Surreality.entitlements
@@ -6,7 +6,7 @@
 	<string>development</string>
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array>
-		<string>iCloud.com.L-BSoftwareArtist.Surreality</string>
+		<string>iCloud.L-BSoftwareArtist.WillsFilterTool</string>
 	</array>
 	<key>com.apple.developer.icloud-services</key>
 	<array>
