N74.08 Correct/copy in PGLImageController.swift from the Surreality directory. Apply stashed change to help page at startup

--- a/WillsFilterTool/Settings.bundle/Root.plist
+++ b/WillsFilterTool/Settings.bundle/Root.plist
@@ -12,7 +12,7 @@
 			<key>Title</key>
 			<string>Show Help Page at startup</string>
 			<key>Key</key>
-			<string>showHelpPageAtStartup</string>
+			<string>displayStartHelp</string>
 			<key>DefaultValue</key>
 			<true/>
 		</dict>
