N74.14 Photo Library permission string changed. Version 1.1 Build (11)

--- a/WillsFilterTool/Info.plist
+++ b/WillsFilterTool/Info.plist
@@ -23,7 +23,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<false/>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Display Photo collections &amp; Albums</string>
+	<string>The app will display your photos and apply visual effect filters to the display.</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
