R78.0 added PGLTripleSplitController and modified test cases for RiftEffects module.

--- a/RiftEffects.xcodeproj/xcshareddata/xcschemes/WillsFilterTool.xcscheme
+++ b/RiftEffects.xcodeproj/xcshareddata/xcschemes/WillsFilterTool.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "A3BF502124D3299100CD5114"
+               BuildableName = "RiftEffectsTests.xctest"
+               BlueprintName = "RiftEffectsTests"
+               ReferencedContainer = "container:RiftEffects.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
@@ -50,6 +60,13 @@
             ReferencedContainer = "container:RiftEffects.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "DeviceIsSimulator"
+            value = "true"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
