R79.23 container name due to permission error using iCloud Container Identifier - iCloud.com.L-BSoftwareArtist.RiftEffects

--- a/RiftEffects/Info.plist
+++ b/RiftEffects/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleName</key>
 	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>L-BSoftwareArtist.RiftEffects</string>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
