R79.24 successful iCloud migration to container Cloud.L-BSoftwareArtist.RiftEffects

--- a/RiftEffects/RiftEffects.entitlements
+++ b/RiftEffects/RiftEffects.entitlements
@@ -4,13 +4,13 @@
 <dict>
 	<key>aps-environment</key>
 	<string>development</string>
-	<key>com.apple.developer.icloud-container-identifiers</key>
-	<array>
-		<string>iCloud.com.L-BSoftwareArtist.RiftEffects</string>
-	</array>
 	<key>com.apple.developer.icloud-services</key>
 	<array>
 		<string>CloudKit</string>
+	</array>
+	<key>com.apple.developer.icloud-container-identifiers</key>
+	<array>
+		<string>iCloud.L-BSoftwareArtist.RiftEffects</string>
 	</array>
 </dict>
 </plist>
