R80.13 Parms 'Other' section removed. Now just images or parms sections. Default photo format 'HEIF', changed from 'JPEG'

--- a/RiftEffects/Settings.bundle/Root.plist
+++ b/RiftEffects/Settings.bundle/Root.plist
@@ -30,7 +30,7 @@
 			<key>Key</key>
 			<string>photosFileType</string>
 			<key>DefaultValue</key>
-			<string>JPEG</string>
+			<string>HEIF</string>
 			<key>Titles</key>
 			<array>
 				<string>JPEG</string>
