R85.17 Limited Photo Library warnings

--- a/RiftEffects/Info.plist
+++ b/RiftEffects/Info.plist
@@ -22,6 +22,8 @@
 	<false/>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>The app will display your photos and apply visual effect filters to the display.</string>
+	<key>PHPhotoLibraryPreventAutomaticLimitedAccessAlert</key>
+	<false/>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
