R85.21 PGLStackProvider showChildStack default setting to false to filter child input stacks from the openStack listing

--- a/RiftEffects/Settings.bundle/Root.plist
+++ b/RiftEffects/Settings.bundle/Root.plist
@@ -10,6 +10,16 @@
 			<key>Type</key>
 			<string>PSToggleSwitchSpecifier</string>
 			<key>Title</key>
+			<string>Show child filter stacks</string>
+			<key>Key</key>
+			<string>showChildStack</string>
+			<key>DefaultValue</key>
+			<false/>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
 			<string>Show Help Page at startup</string>
 			<key>Key</key>
 			<string>displayStartHelp</string>
