--- a/RiftEffects/Info.plist
+++ b/RiftEffects/Info.plist
@@ -14,7 +14,7 @@
 					<key>UISceneClassName</key>
 					<string>UIWindowScene</string>
 					<key>UISceneDelegateClassName</key>
-					<string>PGLWindowSceneDelegate</string>
+					<string>$(PRODUCT_MODULE_NAME).PGLWindowSceneDelegate</string>
 					<key>UISceneConfigurationName</key>
 					<string>MainScene</string>
 					<key>UISceneStoryboardFile</key>
