--- a/RiftEffects/Settings.bundle/Root.plist
+++ b/RiftEffects/Settings.bundle/Root.plist
@@ -14,7 +14,7 @@
 			<key>Key</key>
 			<string>MainViewImageResize</string>
 			<key>DefaultValue</key>
-			<false/>
+			<true/>
 		</dict>
 		<dict>
 			<key>Type</key>
