--- a/RiftEffects/Settings.bundle/Root.plist
+++ b/RiftEffects/Settings.bundle/Root.plist
@@ -34,7 +34,7 @@
 			<key>Key</key>
 			<string>DisplayStartHelp</string>
 			<key>DefaultValue</key>
-			<true/>
+			<false/>
 		</dict>
 		<dict>
 			<key>Type</key>
